--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,11 @@ li {
   list-style-type: none;
 }
 
+a {
+  text-decoration: none;
+  color: #b0021b;
+}
+
 .popular-list {
   display: flex;
   flex-wrap: wrap;
@@ -45,4 +50,45 @@ li {
 .popular-rank {
   font-size: 20px;
   margin: 10px;
+}
+
+.nav {
+  display: flex;
+}
+
+.active {
+  font-weight: bold;
+}
+
+.nav li {
+  margin-right: 15px;
+
+}
+
+.home-container {
+  text-align: center;
+}
+
+.button {
+  color: #e6e6e6;
+  background: #0a0a0a;
+  border: none;
+  font-size: 16px;
+  border-radius: 3px;
+  width: 200px;
+  text-align: center;
+  display: block;
+  padding: 7px 0;
+  margin: 10px auto;
+}
+
+.button:hover:enabled {
+  background:
+    linear-gradient(#1a1a1a,#0a0a0a);
+    color: #fff;
+    text-decoration: none;
+}
+
+.button:active {
+  transform: translateY(1px);
 }
